@@ -35,12 +35,11 @@ package mekhq.gui.menus;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import javax.swing.JMenu;
 import javax.swing.JMenuItem;
 
-import megamek.common.*;
+import megamek.common.units.*;
 import mekhq.campaign.Campaign;
 import mekhq.campaign.personnel.Person;
 import mekhq.campaign.personnel.enums.PersonnelRole;
@@ -187,7 +186,7 @@ public class AssignPersonToUnitMenu extends JScrollableMenu {
 
             final List<Unit> units = HangarSorter.defaultSorting()
                                            .sort(campaign.getHangar().getUnitsStream().filter(Unit::isAvailable))
-                                           .collect(Collectors.toList());
+                                           .toList();
             for (final Unit unit : units) {
                 Entity entity = unit.getEntity();
                 if (entity.getUnitType() != unitType) {
